--- a/frontend/src/assets/css/tailwind.css
+++ b/frontend/src/assets/css/tailwind.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+
+  /* @tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
     @apply m-0;
-  }
+  } */
